POR/RefEdge/src/objects/POR_App_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Admin_Email_Address__c</fullName>
        <label>Community Admin Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_logo_document_id__c</fullName>
        <label>Company logo document id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContentTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Nomination_Reference_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Nomination Reference Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Sales_Reward_RefTypes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create User Point Referenceability Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Mapping_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck this checkbox to disable the trigger for Data Mapping sObject.</inlineHelpText>
        <label>Data Mapping Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edition_Key__c</fullName>
        <label>Edition Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Footer_logo_document_id__c</fullName>
        <label>Footer logo document id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Overlay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Create_Request_Invitation_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Request Invitation Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Merge_Duplicate_Profiles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Duplicate Profiles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reference_Leads_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Reference Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Custom_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Custom Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Reference_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update All Ref Content Related Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Reference_Profiles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Reference Profiles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Referenceability_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Numbers in Referenceability Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_Reward_Declined_Request_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Reward Declined Request Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>LeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsite_default_template__c</fullName>
        <label>Microsite default template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityProductTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OpportunityProductTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OpportunityTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ProductTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refedge_Community_URL__c</fullName>
        <label>Refedge Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reset_Column_Selector_for_RfSearch_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Column Selector for RfSearch Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <label>Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sync_Reward_to_Influitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Rewards to Influitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Account_and_Contact_Request_NLN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update All Requests No Longer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Account_in_Contact_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Account in Contact Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_All_User_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update All User License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Attribute_in_Reference_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Update Attributes__c and Attribute_Ids__c field of Reference Content.</description>
        <label>Update Attributes in Reference Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Root Parent in All Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Contact_Available_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Contact Available Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Current_Available_Points_for_RBI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Update Current Available Points for RBI.</description>
        <label>Update Current Available Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Filter_Numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Numbers in Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Search Visible True in All Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Inheritable_Value_in_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Inheritable Value in Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Opportunity_Product_Attribute_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether opportunity product attribute mapping is updated or not with Auto-Populate checkbox checked.</description>
        <label>Update Opportunity Product Attribute Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Profile_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Profile Updates for No Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Related_Attribute_Mapping_for_A_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Related Attribute Mapping for A&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <label>RefEdge Configuration</label>
</CustomObject>